# sc2-replay-analyser

./: README.md  main.py  pyproject.toml
.github/workflows/: pythonpackage.yml
sc2replayanalyser/: constants.py  helper.py  models.py  parser.py  sc2planner.py
test/replays/: TvP Uthermal 2mine drop into 2 tank push.SC2Replay
